# Table-Tennis-Cybertutor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  tabletennis_analyzer.spec
docs/: architecture.md
scripts/: analyze_differences.ps1  analyze_user_coach.ps1  analyze_video.ps1  build_exe.ps1  check_environment.ps1  mediapipe_probe.py  run_app.ps1  setup_windows.ps1
src/tabletennis_analyzer/: app.py  cli.py
src/tabletennis_analyzer/core/: __init__.py  comparison.py  export.py  kinematics.py  pipeline.py  pose.py
src/tabletennis_analyzer/llm/: __init__.py  openai_client.py
src/tabletennis_analyzer/ui/: main_window.py
tests/: test_comparison.py  test_kinematics.py  test_pipeline.py
